nimbus/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nimbus-db
  namespace: nimbus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nimbus-db
  template:
    metadata:
      labels:
        app: nimbus-db
    spec:
      containers:
        - name: psql
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: nimbus-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nimbus-db
  namespace: nimbus
spec:
  selector:
    app: nimbus-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
