nimbus/nimbus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nimbus
  namespace: nimbus
  labels:
    app: nimbus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nimbus
  template:
    metadata:
      labels:
        app: nimbus
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: nimbus-sa
      nodeSelector:
        kubernetes.io/hostname: server-master
      containers:
        - name: nimbus
          image: docker.prayujt.com/nimbus:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          args:
            - "server"
---
apiVersion: v1
kind: Service
metadata:
  name: nimbus
  namespace: nimbus
  labels:
    app: nimbus
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nimbus
  type: ClusterIP
